--- a/demos/calendarjs.html
+++ b/demos/calendarjs.html
@@ -14,14 +14,14 @@
 <style type="text/css">
 
 </style>
+
 <section id="calendarjs" class="calendarjs"></section>
 <script>
-require(['iscroll', 'calendarjs'], function(){
+require(['zepto', 'iscroll', 'calendarjs'], function(){
     var Calendarjs = require('calendarjs');
 	var calendarjs = new Calendarjs('#calendarjs', {
 		type: 'schedule',    // 日程
         // systemDate : '2016-6-2',
-        render: '.widget-select-date',   // render
         weekName: ['周日', '周一', '周二', '周三', '周四', '周五', '周六'],
         adpter: function () {
             var data = [
@@ -62,6 +62,7 @@ require(['iscroll', 'calendarjs'], function(){
 });
 require.config({
     paths: {
+        "zepto": "../src/jslib/zepto.min",
         "iscroll": "../src/jslib/iscroll.min",
         "calendarjs": "../build/calendarjs"
     }
