--- a/demos/calendarjs.html
+++ b/demos/calendarjs.html
@@ -56,6 +56,9 @@
 <script>
 require(['zepto', 'iscroll', 'calendarjs', 'calendar'], function(){
 var calendar = require('calendar');
+
+new IScroll('.widget-ui-calendarjs');
+
 ['D54C20', 'CF4857', '81628C', '1C6A81', '13A99E', 'F4634E', '1D7C5A', 'CC9966', 'CC99CC', 'FF9999', '663366', 'FF9933']
     // 功能
     /*
