--- a/demos/calendarjs.html
+++ b/demos/calendarjs.html
@@ -26,11 +26,15 @@
             <tr>
                 <td>
                     <div class="calendarjs-date-border">1</div>
+                    <div class="lunar-calendar">三十</div>
                 </td>
                 <td class="click">
                     <div class="calendarjs-date-border">1</div>
+                    <div class="lunar-calendar">三十</div>
                 </td>
-                <td>3</td>
+                <td>3
+                    <div class="lunar-calendar">三十</div>
+                </td>
                 <td>4</td>
                 <td>5</td>
                 <td>6</td>
