--- a/demos/calendarjs.html
+++ b/demos/calendarjs.html
@@ -12,15 +12,7 @@
 </head>
 <body>
 <section class="widget-ui-calendarjs">
-    <div class="widget-ui-calendarjs-header">
-        <span>日</span>
-        <span>一</span>
-        <span>二</span>
-        <span>三</span>
-        <span>四</span>
-        <span>五</span>
-        <span>六</span>
-    </div>
+    
     <table width="100%" class="widget-ui-calendarjs-date">
         <tbody>
             <tr>
@@ -44,7 +36,7 @@
                 <td class="today">
                     <div class="calendarjs-date-border">1</div>
                 </td>
-                <td>
+                <td class="tomorrow">
                     <div class="calendarjs-date-border">1</div>
                 </td>
                 <td>3</td>
@@ -62,13 +54,13 @@ require(['zepto', 'iscroll', 'calendarjs', 'calendar'], function(){
 var calendar = require('calendar');
 var Calendarjs = require('calendarjs');
 
-var calendarjs = new Calendarjs('#widget-ui-calendarjs', {
+var calendarjs = new Calendarjs('.widget-ui-calendarjs', {
     // 系统时间
     systemDate : '2016-6-2',
     // 每个月背景颜色
-    style: ['D54C20', 'CF4857', '81628C', '1C6A81', '13A99E', 'F4634E', '1D7C5A', 'CC9966', 'CC99CC', 'FF9999', '663366', 'FF9933'],
+    bgStyle: ['D54C20', 'CF4857', '81628C', '1C6A81', '13A99E', 'F4634E', '1D7C5A', 'CC9966', 'CC99CC', 'FF9999', '663366', 'FF9933'],
     // 星期名称
-    weekName: ['周日', '周一', '周二', '周三', '周四', '周五'],
+    weekName: ['周日', '周一', '周二', '周三', '周四', '周五', '周六'],
     // 是否显示农历
     isLunarDate: true,
     // 是否显示农历节日
