--- a/demos/calendarjs.html
+++ b/demos/calendarjs.html
@@ -13,7 +13,7 @@
 <body>
 <section class="widget-ui-calendarjs">
     
-    <table width="100%" class="widget-ui-calendarjs-date">
+    <!-- <table width="100%" class="widget-ui-calendarjs-date">
         <tbody>
             <tr>
                 <td>
@@ -46,7 +46,7 @@
                 <td>7</td>
             </tr>
         </tbody>
-    </table>
+    </table> -->
 </section>
 <div class="solarlunar"></div>
 <script>
@@ -59,7 +59,7 @@ var calendarjs = new Calendarjs('.widget-ui-calendarjs', {
     systemDate : '2016-6-2',
     // 每个月背景颜色
     bgStyle: ['D54C20', 'CF4857', '81628C', '1C6A81', '13A99E', 'F4634E', '1D7C5A', 'CC9966', 'CC99CC', 'FF9999', '663366', 'FF9933'],
-    // 星期名称
+    // 星期名称 周日必须在第一位
     weekName: ['周日', '周一', '周二', '周三', '周四', '周五', '周六'],
     // 是否显示农历
     isLunarDate: true,
