--- a/demos/calendarjs.html
+++ b/demos/calendarjs.html
@@ -11,43 +11,41 @@
 <script src="../src/jslib/require.js"></script>
 </head>
 <body>
-<section class="widget-ui-calendarjs">
-    
-    <!-- <table width="100%" class="widget-ui-calendarjs-date">
-        <tbody>
-            <tr>
-                <td>
-                    <div class="calendarjs-date-border">1</div>
-                    <div class="lunar-calendar">三十</div>
-                </td>
-                <td class="click">
-                    <div class="calendarjs-date-border">1</div>
-                    <div class="lunar-calendar">三十</div>
-                </td>
-                <td>3
-                    <div class="lunar-calendar">三十</div>
-                </td>
-                <td>4</td>
-                <td>5</td>
-                <td>6</td>
-                <td>7</td>
-            </tr>
-            <tr>
-                <td class="today">
-                    <div class="calendarjs-date-border">1</div>
-                </td>
-                <td class="tomorrow">
-                    <div class="calendarjs-date-border">1</div>
-                </td>
-                <td>3</td>
-                <td>4</td>
-                <td>5</td>
-                <td>6</td>
-                <td>7</td>
-            </tr>
-        </tbody>
-    </table> -->
-</section>
+<section class="widget-ui-calendarjs"></section>
+<!-- <table width="100%" class="widget-ui-calendarjs-date">
+    <tbody>
+        <tr>
+            <td>
+                <div class="calendarjs-date-border">1</div>
+                <div class="lunar-calendar">三十</div>
+            </td>
+            <td class="click">
+                <div class="calendarjs-date-border">1</div>
+                <div class="lunar-calendar">三十</div>
+            </td>
+            <td>3
+                <div class="lunar-calendar">三十</div>
+            </td>
+            <td>4</td>
+            <td>5</td>
+            <td>6</td>
+            <td>7</td>
+        </tr>
+        <tr>
+            <td class="today">
+                <div class="calendarjs-date-border">1</div>
+            </td>
+            <td class="tomorrow">
+                <div class="calendarjs-date-border">1</div>
+            </td>
+            <td>3</td>
+            <td>4</td>
+            <td>5</td>
+            <td>6</td>
+            <td>7</td>
+        </tr>
+    </tbody>
+</table> -->
 <script>
 require(['zepto', 'iscroll', 'calendarjs'], function(){
     var Calendarjs = require('calendarjs');
@@ -68,7 +66,6 @@ require(['zepto', 'iscroll', 'calendarjs'], function(){
         }
     });
 
-    new IScroll('.widget-ui-calendarjs');
 });
 
     // 功能
