--- a/demos/calendarjs.html
+++ b/demos/calendarjs.html
@@ -52,16 +52,19 @@ require(['zepto', 'iscroll', 'calendarjs'], function(){
 
     var calendarjs = new Calendarjs('.widget-ui-calendarjs', {
         // 系统时间
-        systemDate : '2016-7-31',
+        // systemDate : '2016-7-31',
         // 每个月背景颜色
         bgStyle: ['D54C20', 'CF4857', '81628C', '1C6A81', '13A99E', 'F4634E', '1D7C5A', 'CC9966', 'CC99CC', 'FF9999', '663366', 'FF9933'],
         // 星期名称 周日必须在第一位
         weekName: ['周日', '周一', '周二', '周三', '周四', '周五', '周六'],
+        // 是否设置过期日期显示灰色
+        isExpired: true,
         // 是否显示农历
         isLunarDate: false,
         // 是否显示农历节日
-        isHoliday: true,
-        cb: function (data) {
+        isHoliday: false,
+        // 点击日期回调
+        clickCallback: function (data) {
             // 
         }
     });
@@ -127,7 +130,7 @@ require.config({
     paths: {
         "zepto": "../src/jslib/zepto.min",
         "iscroll": "../src/jslib/iscroll.min",
-        "calendarjs": "../build/calendarjs"
+        "calendarjs": "../dist/js/calendarjs.min"
     }
 });
 </script>
